--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -1,20 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal" android:layout_width="500dp"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_margin="1dp"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="5dp"
-
-        android:layout_height="match_parent">
-
-
+<?xml version="1.0" encoding="utf-8"?><!--
+- Our input dialog layout.
+- Shall act as our form for enetring data to database..
+- At the root we have a CardView widget.
+- We then define a vertical LinearLayout inside our CardView.
+- We can also customize our CardView by specifying cardCornerRadius,cardElevation,width,height etc.
+- Inside our LinearLayout we have Material design edittexts and buttons
+-->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="500dp"
+    android:layout_height="match_parent"
+    android:layout_margin="1dp"
+    android:orientation="horizontal"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardElevation="5dp">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameLayout"
@@ -25,8 +29,8 @@
                 android:id="@+id/nameEditTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:hint= "Name" />
+                android:hint="Name"
+                android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -38,32 +42,33 @@
                 android:id="@+id/propellantEditTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:hint= "Propeant" />
+                android:hint="Propeant"
+                android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
 
 
-        <Button android:id="@+id/saveBtn"
+        <Button
+            android:id="@+id/saveBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@color/colorAccent"
+            android:clickable="true"
             android:text="Save"
-            android:clickable="true"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"/>
-        <Button android:id="@+id/retrieveBtn"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/retrieveBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Reload"
-            android:clickable="true"
-            android:background="@color/colorAccent"
             android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"/>
+            android:background="@color/colorAccent"
+            android:clickable="true"
+            android:text="Reload"
+            android:textColor="@android:color/white" />
 
 
+    </LinearLayout>
 
-
-</LinearLayout>
-
-    </android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView>
 
